fix general styles

--- a/index.html
+++ b/index.html
@@ -102,110 +102,78 @@
     <h1 class="speakers_header" data-l10n-id="nav_item_speakers_header"></h1>
     <div class="speakers_wrapper">
 
-        <div data-url="stepanova" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="stepanova" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
+            <div class="meta">
                 <h2 class="speaker_name">Варя Степанова</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
             </div>
         </div>
-        <div data-url="larchenko" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="larchenko" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
+            <div class="meta">
                 <h2 class="speaker_name">Михаил Ларченко</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker2_theme"></h3>
             </div>
         </div>
-        <div data-url="dashukevich" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="dashukevich" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
+            <div class="meta">
                 <h2 class="speaker_name">Вова Дашукевич</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
             </div>
         </div>
-        <div data-url="miranovich" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="miranovich" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
+            <div class="meta">
                 <h2 class="speaker_name">Марина Миронович</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker4_theme"></h3>
             </div>
         </div>
-        <div data-url="monschke" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="monschke" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
+            <div class="meta">
                 <h2 class="speaker_name">Jan Monschke</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker5_theme"></h3>
             </div>
         </div>
-        <div data-url="zhigalov" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="zhigalov" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
+            <div class="meta">
                 <h2 class="speaker_name">Сергей Жигалов</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker6_theme"></h3>
             </div>
         </div>
-        <div data-url="halimova" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+        <div data-url="halimova" class="speaker_wrapper show_popup">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="meta">
                 <h2 class="speaker_name">Зарема Халилова</h2>
+                <a href="#" target="_blank">@twitter</a>
+                <a href="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
             </div>
         </div>
-        <div data-url="mursa" class="speaker_wrapper">
-            <div class="meta_wrapper">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="meta">
-                    <a href="#" target="_blank" class="twitter">@twitter</a>
-                    <a href="community" class="community">Community</a>
-                </div>
-            </div>
-            <div class="speaker_info">
+<!--         <div data-url="mursa" class="speaker_wrapper">
+            <img class="speaker_photo" src="images/speakers/fff.png" />
+            <div class="meta">
                 <h2 class="speaker_name">Мурся</h2>
+                <a href="#" target="_blank" class="twitter">@twitter</a>
+                <a href="community" class="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
             </div>
-        </div>
+        </div> -->
 
         <!-- Popups -->
         <div class="overlay"></div>
@@ -348,7 +316,7 @@
             <span class="popup_close">×</span>
 
         </div>
-
+<!-- 
         <div class="popup mursa">
 
             <div data-url="mursa" class="speaker_wrapper_popup">
@@ -367,7 +335,7 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
     </div>
 
@@ -379,53 +347,26 @@
     <div class="speakers_wrapper">
 
 
-        <div data-url="WebNotBombs" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">WebNotBombs</h2>
-            </div>
-        </div><!--
-
-        --><div data-url="4front" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">4front</h2>
-            </div>
-        </div><!--
-
-            --><div data-url="HelsinkiJS" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">HelsinkiJS</h2>
-            </div>
-        </div><!--
-
-            --><div data-url="BerlinJS" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">BerlinJS</h2>
-            </div>
-        </div><!--
-
-            --><div data-url="EkbJS" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">EkbJS</h2>
-            </div>
-        </div><!--
-
-            --><div data-url="SPB" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">SPB Frontend</h2>
-            </div>
-        </div><!--
-
-            --><div data-url="MoscowJS" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="speaker_info">
-                <h2 class="speaker_name">MoscowJS</h2>
-            </div>
+        <div data-url="WebNotBombs" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=WebNotBombs" alt="WebNotBombs" />
+        </div>
+        <div data-url="4front" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=4front" alt="4front" />
+        </div>
+        <div data-url="HelsinkiJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=HelsinkiJS" alt="HelsinkiJS"/>
+        </div>
+        <div data-url="BerlinJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=BerlinJS" alt="BerlinJS" />
+        </div>
+        <div data-url="EkbJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=EkbJS" alt="EkbJS" />
+        </div>
+        <div data-url="SPB" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=SPB Frontend" alt="SPB Frontend" />
+        </div>
+        <div data-url="MoscowJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=MoscowJS" alt="MoscowJS" />
         </div>
 
         <!-- Popups -->
@@ -572,22 +513,22 @@
         <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
 
         <div class="place">
-            <span class="date-event" data-l10n-id="when"></span>
+            <span class="date-event" data-l10n-id="header_date"></span>
 
             <p data-l10n-id="where">
 
             </p>
         </div>
-        <img src="images/MailRu_Group_Logo.svg" alt="Imaguru" class="imaguru"/>
+        <img src="images/MailRu_Group_Logo.svg" alt="mail.ru" class="mail_ru"/>
     </div>
 </section>
 
-<section class="section section-3 section-indent centered" id="about">
-    <div class="inside-section">
+<section class="section section-3 section-indent" id="about">
         <h2 class="main-caption" data-l10n-id="about"></h2>
 
-        <p class="text aboutText" data-l10n-id="aboutText"></p>
-    </div>
+        <p class="text" data-l10n-id="aboutFirst"></p>
+        <p class="text" data-l10n-id="aboutSecond"></p>
+        <p class="text" data-l10n-id="aboutLast"></p>
 </section>
 
 
