--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     <h2 data-l10n-id="header_date" class="header_date"></h2>
 
     <nav class="top_nav centered">
-        <a href="#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
-        <a href="#location" data-l10n-id="nav_item_location" class="nav_item"></a>
+        <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
+        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
         <!-- <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a> -->
-        <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
-        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
+        <a href="about.html" data-l10n-id="nav_item_about" class="nav_item"></a>
         <div class="social_item">
             <a href="#twitter" class="social twitter"></a>
             <a href="#facebook" class="social facebook"></a>
@@ -81,12 +81,12 @@
     </div>
 
     <nav class="mobile_menu">
-        <a href="#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
-        <a href="#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
-        <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
-        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
+        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
+        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <a href="index.html#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a>
+        <a href="about.html" data-l10n-id="nav_item_about" class="nav_item"></a>
         <div class="nav_item">
             <a href="#twitter" class="social twitter"></a>
             <a href="#facebook" class="social facebook"></a>
