--- a/about.html
+++ b/about.html
@@ -136,6 +136,19 @@
 
 </section>
 
+<section class="section acknowledgements">
+
+    <h2 class="acknowledgementsTitle" data-l10n-id="acknowledgementsTitle"></h2>
+
+    <p class="acknowledgementsDesc" data-l10n-id="acknowledgementsDesc"></p>
+
+    <ul class="acknowledgementsList">
+        <li><span class="acknowledgementsName">Dave Brotherstone</span> - <a href="" class="acknowledgementsTwitter">@davegb3</a></li>
+        <li><span class="acknowledgementsName">Ola Gasidlo</span> - <a href="" class="acknowledgementsTwitter">@misprintedtype</a></li>
+    </ul>
+
+</section>
+
 </body>
 
 </html>
