add new content to site

--- a/index.html
+++ b/index.html
@@ -310,24 +310,27 @@
 
 
         <div data-url="WebNotBombs" class="show_popup community">
-            <img src="/images/c_logos/wnb-huge.svg" alt="WebNotBombs" width="300" height="300"/>
+            <img src="images/c_logos/wnb-huge.svg" alt="WebNotBombs" width="300" height="300"/>
         </div>
-<!--         <div data-url="4front" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=4front" alt="4front" />
-        </div> -->
-<!--         <div data-url="HelsinkiJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=HelsinkiJS" alt="HelsinkiJS"/>
+        <div data-url="chellyJS" class="show_popup community">
+            <img src="images/c_logos/chellyjs.png" alt="chellyJS" width="300" height="300" />
         </div>
-        <div data-url="BerlinJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=BerlinJS" alt="BerlinJS" />
+        <div data-url="FrontTalks" class="show_popup community">
+            <img src="images/c_logos/fronttalks.png" alt="FrontTalks" width="300" height="300" />
         </div>
         <div data-url="EkbJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=EkbJS" alt="EkbJS" />
+            <img src="images/c_logos/ekbjs.png" alt="EkbJS" width="300" height="300"/>
         </div>
-        <div data-url="SPB" class="show_popup community">
+       <!--  <div data-url="HelsinkiJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=HelsinkiJS" alt="HelsinkiJS"/>
+        </div> -->
+        <!-- <div data-url="BerlinJS" class="show_popup community">
+            <img src="http://dummyimage.com/300x300/000/fff&text=BerlinJS" alt="BerlinJS" />
+        </div> -->
+       <!--  <div data-url="SPB" class="show_popup community">
             <img src="http://dummyimage.com/300x300/000/fff&text=SPB Frontend" alt="SPB Frontend" />
-        </div>
-        <div data-url="MoscowJS" class="show_popup community">
+        </div> -->
+        <!-- <div data-url="MoscowJS" class="show_popup community">
             <img src="http://dummyimage.com/300x300/000/fff&text=MoscowJS" alt="MoscowJS" />
         </div> -->
 
@@ -335,7 +338,7 @@
         <div class="popup WebNotBombs">
 
             <div class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
+                <img class="speaker_photo" src="images/c_logos/wnb-huge.svg" alt="WebNotBombs" />
                 <div class="speaker_info">
                     <h2 class="speaker_name">WebNotBombs</h2>
                     <p class="speaker_links">
@@ -356,7 +359,71 @@
 
         </div>
 
-        <div class="popup 4front">
+        <div class="popup chellyJS">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/c_logos/chellyjs.png" alt="chellyJS"/>
+                <div class="speaker_info">
+                    <h2 class="speaker_name">chellyJS</h2>
+                    <p class="speaker_links">
+                        <a href="https://www.facebook.com/groups/822029664545241/" target="_blank">Facebook</a>
+                        <a href="http://twitter.com/chellyjs" target="_blank">Twitter</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Олег Мохов</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community2_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup FrontTalks">
+
+            <div class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/c_logos/fronttalks.png" alt="FrontTalks"/>
+                <div class="speaker_info">
+                    <h2 class="speaker_name">FrontTalks</h2>
+                    <p class="speaker_links">
+                        <a href="http://twitter/fronttalks" target="_blank">Twitter</a>
+                        <a href="http://vimeo.com/fronttalks" target="_blank">Youtube</a>
+                        <a href="http://fronttalks.ru" target="_blank">Web</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Миша Давыдов, Ирина Роева, Олег Мохов</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community3_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+        <div class="popup EkbJS">
+
+            <div data-url="monschke" class="speaker_wrapper_popup">
+                <img class="speaker_photo" src="images/c_logos/ekbjs.png" alt="EkbJS" />
+                <div class="speaker_info">
+                    <h2 class="speaker_name">EkbJS</h2>
+                    <p class="speaker_links">
+                        <a href="https://www.facebook.com/groups/ekbjs/" target="_blank">Facebook</a>
+                        <a href="http://twitter.com/ekbjs" target="_blank">Twitter</a>
+                    </p>
+                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
+                    <p class="community_organizers">Олег Мохов</p>
+                </div>
+            </div>
+
+            <p data-l10n-id="community4_description"></p>
+
+            <span class="popup_close">×</span>
+
+        </div>
+
+<!--         <div class="popup 4front">
 
             <div class="speaker_wrapper_popup">
                 <img class="speaker_photo" src="images/speakers/fff.png" />
@@ -376,9 +443,9 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
-        <div class="popup HelsinkiJS">
+<!--         <div class="popup HelsinkiJS">
 
             <div data-url="dashukevich" class="speaker_wrapper_popup">
                 <img class="speaker_photo" src="images/speakers/fff.png" />
@@ -395,9 +462,9 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
-        <div class="popup BerlinJS">
+<!--         <div class="popup BerlinJS">
 
             <div data-url="miranovich" class="speaker_wrapper_popup">
                 <img class="speaker_photo" src="images/speakers/fff.png" />
@@ -414,28 +481,9 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
-        <div class="popup EkbJS">
-
-            <div data-url="monschke" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">EkbJS</h2>
-                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers">Олег Мохов</p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community5_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup SPB">
+<!--         <div class="popup SPB">
 
             <div data-url="zhigalov" class="speaker_wrapper_popup">
                 <img class="speaker_photo" src="images/speakers/fff.png" />
@@ -452,9 +500,9 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
-        <div class="popup MoscowJS">
+<!--         <div class="popup MoscowJS">
 
             <div data-url="halimova" class="speaker_wrapper_popup">
                 <img class="speaker_photo" src="images/speakers/fff.png" />
@@ -471,18 +519,17 @@
 
             <span class="popup_close">×</span>
 
-        </div>
+        </div> -->
 
     </div>
 
 </section>
 
-<section class="section centered section-13" id="location">
-    <div id="map" style="width: 500px; height: 500px;"></div>
+<section class="section section-13" id="location">
+    <div id="map"></div>
     <div class="when-block">
-        <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
-
         <div class="place">
+            <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
             <span class="date-event" data-l10n-id="header_date"></span>
 
             <p data-l10n-id="where">
@@ -497,8 +544,8 @@
         <h2 class="main-caption" data-l10n-id="about"></h2>
 
         <p class="text" data-l10n-id="aboutFirst"></p>
-        <p class="text" data-l10n-id="aboutSecond"></p>
-        <p class="text" data-l10n-id="aboutLast"></p>
+<!--         <p class="text" data-l10n-id="aboutSecond"></p>
+        <p class="text" data-l10n-id="aboutLast"></p> -->
 </section>
 
 
@@ -506,21 +553,21 @@
     <h2 class="main-caption partners-caption" data-l10n-id="nav_item_sponsors"></h2>
     <ul class="sponsors">
         <li>
-            <a target="_blank" href="http://yandex.ru"><img src="images/yandex-logo.png" alt="Yandex"/></a>
+            <a target="_blank" href="http://yandex.ru" title="Yandex"><img src="images/yandex-logo.png" alt="Yandex"/></a>
         </li>
         <li>
-            <a target="_blank" href="http://mail.ru/"><img src="images/MailRu_Group_Logo.svg" alt="Mail.ru"/></a>
+            <a target="_blank" href="http://mail.ru/" title="Mail.ru"><img src="images/MailRu_Group_Logo.svg" alt="Mail.ru"/></a>
         </li>
         <li>
-            <a target="_blank" href="http://www.epam.com/"><img src="images/epam_logo.png" alt="Epam"/></a>
-        </li>
-        <!-- <li>
-            <a target="_blank" href="https://www.jetbrains.com/"><img src="images/logo/jb.png" alt="JetBrains"/></a>
+            <a target="_blank" href="http://www.epam.com/" title="Epam"><img src="images/epam_logo.png" alt="Epam"/></a>
         </li>
         <li>
+            <a target="_blank" href="https://medium.com/h%C3%A6d-exchange" title="Hæd Exchange"><img src="images/logo/head_exchange.png" alt="Hæd Exchange"/></a>
+        </li>
+<!--         <li>
             <a target="_blank" href="http://webnotbombs.net/"><img src="images/logo/wnb.jpg" alt="Web Not Bombs"/></a>
-        </li>
-        <li>
+        </li> -->
+<!--         <li>
             <a target="_blank" href="http://www.onega.by/"><img src="images/logo/onega.jpg" alt="Onega"/></a>
         </li> -->
     </ul>
