Rearrange menu items

--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
 
     --><nav class="top_nav">
         <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <!-- <a href="#program" data-l10n-id="nav_item_program" class="nav_item"></a> -->
+        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
         <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
-        <!-- <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a> -->
         <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
     </nav><!--
 
 
@@ -81,11 +80,10 @@
 
     <nav class="mobile_menu">
         <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <!-- <a href="#program" data-l10n-id="nav_item_program" class="nav_item"></a> -->
+        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
         <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
-        <!-- <a href="#moscow_guide" data-l10n-id="nav_item_moscow_guide" class="nav_item"></a> -->
         <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
         <div class="nav_item">
             <a href="https://twitter.com/frontend_union" target="_blank" class="social twitter"></a>
             <!-- <a href="#facebook" class="social facebook"></a> -->
@@ -178,130 +176,6 @@
                 <a href="community" class="community">Community</a>
                 <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
             </div>
-        </div> -->
-
-        <!-- Popups -->
-        <div class="popup stepanova">
-            <img class="speaker_photo" src="images/speakers/stepanova_300-300.jpg" />
-            <h2 class="speaker_name">Варя Степанова</h2>
-            <p class="speaker_links">
-                <a href="https://twitter.com/toivonens" target="_blank" class="speaker_twitter">@toivonens</a>
-                <a href="#community">HelsinkiJS</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
-            <p data-l10n-id="speaker1_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup larchenko">
-            <img class="speaker_photo" src="images/speakers/Larchenko_300.jpg" />
-            <h2 class="speaker_name">Михаил Ларченко</h2>
-            <p class="speaker_links">
-                <a href="http://twitter.com/ashorror" target="_blank" class="speaker_twitter">@ashorror</a>
-                <a href="#community">WebNotBombs&nbsp;Amsterdam</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker1_theme"></h3>
-            <p data-l10n-id="speaker2_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup dashukevich">
-            <img class="speaker_photo" src="images/speakers/dashukevich_300.jpg" />
-            <h2 class="speaker_name">Вова Дашукевич</h2>
-            <p class="speaker_links">
-                <a href="http://twitter.com/life__777" target="_blank" class="speaker_twitter">@life__777</a>
-                <a href="#community">4Front</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker3_theme"></h3>
-
-            <p data-l10n-id="speaker3_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup miranovich">
-            <img class="speaker_photo" src="images/speakers/miranovich_300.jpg" />
-            <h2 class="speaker_name">Марина Миронович</h2>
-            <p class="speaker_links">
-                <a href="http://twitter.com/obnoxious_mari" target="_blank" class="speaker_twitter">@obnoxious_mari</a>
-                <a href="#community">WebNotBombs&nbsp;Minsk</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker4_theme"></h3>
-
-            <p data-l10n-id="speaker4_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup monschke">
-            <img class="speaker_photo" src="images/speakers/Monschke_300x300.jpeg" />
-            <h2 class="speaker_name">Jan Monschke</h2>
-            <p class="speaker_links">
-                <a href="http://twitter.com/thedeftone" target="_blank" class="speaker_twitter">@thedeftone</a>
-                <a href="#community">BerlinJS</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker5_theme"></h3>
-
-            <p data-l10n-id="speaker5_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-        <div class="popup zhigalov">
-            <img class="speaker_photo" src="images/speakers/zhigalov_300x300.jpg" />
-            <h2 class="speaker_name">Сергей Жигалов</h2>
-            <p class="speaker_links">
-                <a href="http://twitter.com/sergey_zhigalov" target="_blank" class="speaker_twitter">@sergey_zhigalov</a>
-                <a href="#community">spb&nbsp;frontend</a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker6_theme"></h3>
-
-            <p data-l10n-id="speaker6_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div>
-
-<!--         <div class="popup halimova">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <h2 class="speaker_name">Зарема Халилова</h2>
-            <p class="speaker_links">
-                <a href="" target="_blank" class="speaker_twitter"></a>
-                <a class="speaker_sponsor" target="_blank" href=""></a>
-            </p>
-            <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
-
-            <p data-l10n-id="speaker7_speech"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-<!-- 
-        <div class="popup mursa">
-
-            <div data-url="mursa" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">Мурся</h2>
-                    <p class="speaker_links"><a href="" target="_blank" class="speaker_twitter"></a>
-                        ∙
-                        <a class="speaker_sponsor" target="_blank" href=""></a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
-                </div>
-            </div>
-
-            <p data-l10n-id="speaker8_speech"></p>
-
-            <span class="popup_close">×</span>
-
         </div> -->
 
     </div>
