--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
     <link href="css/reset.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css"/>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Exo+2&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="css/new_style.css" rel="stylesheet" />
 
 
@@ -53,10 +52,10 @@
 
     --><nav class="top_nav">
         <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <!--<a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>-->
         <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
-        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <!--<a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>-->
     </nav><!--
 
 
@@ -80,10 +79,10 @@
 
     <nav class="mobile_menu">
         <a href="index.html#speakers" data-l10n-id="nav_item_speakers" class="nav_item"></a>
-        <a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>
+        <!--<a href="index.html#communities" data-l10n-id="nav_item_program" class="nav_item"></a>-->
         <a href="index.html#location" data-l10n-id="nav_item_location" class="nav_item"></a>
-        <a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
-        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>
+        <!--<a href="#about" data-l10n-id="nav_item_about" class="nav_item"></a>
+        <a href="index.html#sponsors" data-l10n-id="nav_item_sponsors" class="nav_item"></a>-->
         <div class="nav_item">
             <a href="https://twitter.com/frontend_union" target="_blank" class="social twitter"></a>
             <!-- <a href="#facebook" class="social facebook"></a> -->
@@ -159,30 +158,11 @@
             </div>
         </div>
 
-<!--         <div data-url="halimova" class="speaker_wrapper show_popup">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="meta">
-                <h2 class="speaker_name">Зарема Халилова</h2>
-                <a href="#" target="_blank">@twitter</a>
-                <a href="community">Community</a>
-                <h3 class="speaker_theme" data-l10n-id="speaker7_theme"></h3>
-            </div>
-        </div> -->
-<!--         <div data-url="mursa" class="speaker_wrapper">
-            <img class="speaker_photo" src="images/speakers/fff.png" />
-            <div class="meta">
-                <h2 class="speaker_name">Мурся</h2>
-                <a href="#" target="_blank" class="twitter">@twitter</a>
-                <a href="community" class="community">Community</a>
-                <h3 class="speaker_theme" data-l10n-id="speaker8_theme"></h3>
-            </div>
-        </div> -->
-
     </div>
 
 </section>
 
-<section class="section centered communities" id="communities">
+<!--<section class="section centered communities" id="communities">
 
     <h1 class="speakers_header" data-l10n-id="nav_item_communities_header"></h1>
     <div class="speakers_wrapper">
@@ -200,20 +180,7 @@
         <div data-url="EkbJS" class="show_popup community">
             <img src="images/c_logos/ekbjs.png" alt="EkbJS" width="300" height="300"/>
         </div>
-       <!--  <div data-url="HelsinkiJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=HelsinkiJS" alt="HelsinkiJS"/>
-        </div> -->
-        <!-- <div data-url="BerlinJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=BerlinJS" alt="BerlinJS" />
-        </div> -->
-       <!--  <div data-url="SPB" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=SPB Frontend" alt="SPB Frontend" />
-        </div> -->
-        <!-- <div data-url="MoscowJS" class="show_popup community">
-            <img src="http://dummyimage.com/300x300/000/fff&text=MoscowJS" alt="MoscowJS" />
-        </div> -->
 
-        <!-- Popups -->
         <div class="popup WebNotBombs">
 
             <div class="speaker_wrapper_popup">
@@ -302,107 +269,9 @@
 
         </div>
 
-<!--         <div class="popup 4front">
-
-            <div class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">4front</h2>
-                    <p class="speaker_links">
-                        <a href="https://www.facebook.com/groups/4front/" target="_blank">Facebook</a>
-                        <a href="https://twitter.com/4frontby" target="_blank">Twitter</a>
-                        <a href="https://www.youtube.com/channel/UCj3KH8jxwcT5zOrByWmNXhA/feed" target="_blank">Youtube</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers">Дима Дудин</p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community2_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-
-<!--         <div class="popup HelsinkiJS">
-
-            <div data-url="dashukevich" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">HelsinkiJS</h2>
-                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers">Олег Подсечин</p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community3_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-
-<!--         <div class="popup BerlinJS">
-
-            <div data-url="miranovich" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">BerlinJS</h2>
-                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers">Tiffany Conroy, Robin Mehner , Michele Guido, Jan Lehnardt</p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community4_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-
-<!--         <div class="popup SPB">
-
-            <div data-url="zhigalov" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">SPB Frontend</h2>
-                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers"></p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community6_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-
-<!--         <div class="popup MoscowJS">
-
-            <div data-url="halimova" class="speaker_wrapper_popup">
-                <img class="speaker_photo" src="images/speakers/fff.png" />
-                <div class="speaker_info">
-                    <h2 class="speaker_name">MoscowJS</h2>
-                    <p class="speaker_links"><a href="https://www.facebook.com/" target="_blank" class="community_fb">fb</a>
-                    </p>
-                    <h3 class="speaker_theme" data-l10n-id="community_organizer"></h3>
-                    <p class="community_organizers">Андрей Саломатин, Андрей Яманов, Андрей Гершун, Миша Башкиров, Василика Климова, Константин Буркалёв</p>
-                </div>
-            </div>
-
-            <p data-l10n-id="community7_description"></p>
-
-            <span class="popup_close">×</span>
-
-        </div> -->
-
     </div>
 
-</section>
+</section>-->
 
 <section class="section section-13" id="location">
     <div id="map"></div>
@@ -411,24 +280,22 @@
             <h2 class="main-caption" data-l10n-id="whenAndWhere"></h2>
             <span class="date-event" data-l10n-id="header_date"></span>
 
-            <p data-l10n-id="where">
+            <p data-l10n-id="where" class="where-event">
 
             </p>
         </div>
-        <img src="images/MailRu_Group_Logo.svg" alt="mail.ru" class="mail_ru"/>
+
     </div>
 </section>
 
-<section class="section section-3 section-indent" id="about">
+<!--<section class="section section-3 section-indent" id="about">
         <h2 class="main-caption" data-l10n-id="about"></h2>
 
         <p class="text" data-l10n-id="aboutFirst"></p>
-<!--         <p class="text" data-l10n-id="aboutSecond"></p>
-        <p class="text" data-l10n-id="aboutLast"></p> -->
-</section>
+</section>-->
 
 
-<section class="section section-14 section-indent centered" id="sponsors">
+<!--<section class="section section-14 section-indent centered" id="sponsors">
     <h2 class="main-caption partners-caption" data-l10n-id="nav_item_sponsors"></h2>
     <ul class="sponsors">
         <li>
@@ -443,14 +310,9 @@
         <li>
             <a target="_blank" href="https://medium.com/h%C3%A6d-exchange" title="Hæd Exchange"><img src="images/logo/head_exchange.png" alt="Hæd Exchange"/></a>
         </li>
-<!--         <li>
-            <a target="_blank" href="http://webnotbombs.net/"><img src="images/logo/wnb.jpg" alt="Web Not Bombs"/></a>
-        </li> -->
-<!--         <li>
-            <a target="_blank" href="http://www.onega.by/"><img src="images/logo/onega.jpg" alt="Onega"/></a>
-        </li> -->
     </ul>
-</section>
+</section>-->
+
 <div class="overlay"></div>
 <script>
     (function (i, s, o, g, r, a, m) {
