Fix lang, clear js

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 
     --><div class="lang-wrapper">
-        <a data-lang="ru-RU" href="#ru" class="lang-toggle lang-active">en</a>
-        <a data-lang="en-US" href="#en" class="lang-toggle">ru</a>
+        <a data-lang="ru-RU" href="#ru" class="lang-active">ru</a>
+        <a data-lang="en-US" href="#en" class="">en</a>
     </div>
 
 
@@ -72,8 +72,8 @@
             <div></div>
         </div>
         <div class="lang-wrapper">
-            <a data-lang="ru-RU" href="#ru" class="lang-toggle lang-active">en</a>
-            <a data-lang="en-US" href="#en" class="lang-toggle">ru</a>
+            <a data-lang="ru-RU" href="#ru" class="">ru</a>
+            <a data-lang="en-US" href="#en" class="lang-active">en</a>
         </div>
     </div>
 
